--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-# Core Machine Learning & Deep Learning
-numpy<2.0
-pandas>=2.0
-scikit-learn==1.7.0
-lightgbm==4.6.0
-tensorflow==2.12.0          # ✅ Or use 2.15.0 if you've tested it
-# No need to include standalone keras — use tensorflow.keras instead
+streamlit==1.40.0
 
-# Chemistry-related dependencies
-rdkit-pypi==2022.9.5
-Pillow==11.2.1
+pandas==2.2.2
+numpy==1.26.4
 
-# Web Application
-streamlit==1.46.0
+Pillow==10.4.0
+
+xgboost==2.1.1
+scikit-learn==1.5.2
+
+# TensorFlow cho BiLSTM (.keras)
+tensorflow==2.15.0
+
+# RDKit bản pip (dùng cho canonical SMILES + fingerprints)
+rdkit-pypi==2022.9.3
